--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,16 @@
+:root{
+    --rosa: "#DF4C83";
+    --preto: "#000000";
+    --cinza: "#7C7C7C";
+    --branco: "#ffffff"
+}
+
+
 *, *::after, *::before {
     box-sizing: border-box;
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-body{
-    height: 100vh;
 }
 
 .logoAndButtons {
@@ -37,7 +41,17 @@ nav ul li a {
     text-decoration: none;
     color: black;
 }
-
-footer{
-    bottom: 0px;
+nav ul li a:hover{
+    color: black;
 }
+
+iframe{
+    max-width: 100%;
+}
+
+
+.acompanhantes{
+    display: flex;
+}
+
+
