--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins');
 :root{
-    --rosa: "#DF4C83";
-    --preto: "#000000";
-    --cinza: "#7C7C7C";
-    --branco: "#ffffff"
+    --rosa: #df4c82;
+    --rosaescuro:hsl(338, 73%, 50%);
+    --preto: #000000;
+    --cinza: #7C7C7C;
+    --branco: #ffffff;
 }
 
 
-*, *::after, *::before {
+*, *::after, *::before{
     box-sizing: border-box;
     list-style: none;
     padding: 0;
     margin: 0;
+    font-family: 'Poppins';
+    text-decoration: none;
 }
 
 .logoAndButtons {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: var(--rosa);
+}
+
+.logoAndButtons button{
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    width: 100px;
+    background-color: var(--rosaescuro);
+}
+
+.logoAndButtons button:hover{
+    background-color: var(--rosa);
+    font-weight: bold;
 }
 
 .logo {
@@ -24,8 +42,15 @@
     height: auto;
 }
 
-nav {
+main{
+    background-color: hsl(338, 73%, 80%);
+    /* background-image: url("../assets/img/zyro-image.png");
+    background-repeat: no-repeat;
+    background-position-y: 50%; */
+}
 
+nav {
+    background-color: var(--rosa);
 }
 
 nav ul {
@@ -34,16 +59,22 @@ nav ul {
 }
 
 nav ul li {
-    margin: 10px;
+    padding: 10px;
 }
 
-nav ul li a {
+nav ul li:hover{
+    background-color: var(--rosaescuro);
     text-decoration: none;
-    color: black;
+    color: var(--preto);
+    cursor: pointer;
 }
-nav ul li a:hover{
-    color: black;
+
+nav ul li a,nav ul li a:hover {
+    color: var(--preto);
+    text-decoration: none;
 }
+
+
 
 iframe{
     max-width: 100%;
@@ -54,4 +85,7 @@ iframe{
     display: flex;
 }
 
+footer{
+    background-color: var(--rosaescuro);
+}
 
